--- a/languages/en.lang
+++ b/languages/en.lang
@@ -92,18 +92,18 @@ handlerCheckData.cantCreateUser=Users with id '%1' cannot be written to the data
 handlerEvents.userBanned=You have been banned from using the bot\n» Reason: %1\n» Time: %2\n» User ID: %3
 handlerEvents.threadBanned=This group has been banned from using the bot\n» Reason: %1\n» Time: %2\n» Thread ID: %3
 handlerEvents.onlyAdminBox=This group is currently enabled only group administrators can use the bot
-handlerEvents.onlyAdminBot=𝕆ℕ𝕃𝕐𝔸𝔻𝕄𝕀ℕ 𝐄𝐒𝐓 𝐀𝐂𝐓𝐈𝐕𝐄𝐑✅ 𝐒𝐄𝐔𝐋 °•✮•°✞𝐂𝐈𝐃✞°•✮•° 𝑼𝑻𝑰𝑳𝑰𝑺𝑬 𝑳𝑬 𝑩𝑶𝑻 𝑷𝑶𝑼𝑹 𝑳𝑬 𝑴𝑶𝑴𝑬𝑵𝑻 ✄𝑷𝑳𝑼𝑺 𝑫'𝑰𝑵𝑭𝑶 𝑪𝑶𝑵𝑻𝑨𝑪𝑻𝑬 𝑳𝑬 ☛⫷https://www.facebook.com/cidkageno228⫸×͜×✌♫♫𒀱ꪳ༒Killr࿇꧂ ﾟ°☆ Łøʋε ☆° ﾟ...\n━━━━━━━━━━━━━━━━\n
+handlerEvents.onlyAdminBot=𝕆ℕ𝕃𝕐𝔸𝔻𝕄𝕀ℕ 𝐄𝐒𝐓 𝐀𝐂𝐓𝐈𝐕𝐄𝐑✅ 𝐒𝐄𝐔𝐋 ░▒▓█►─═𝐬𝐢𝐫 𝐑𝐮𝐟𝐢𝐧 ═─◄█▓▒░ 𝑼𝑻𝑰𝑳𝑰𝑺𝑬 𝑳𝑬 𝑩𝑶𝑻 𝑷𝑶𝑼𝑹 𝑳𝑬 𝑴𝑶𝑴𝑬𝑵𝑻 ✄𝑷𝑳𝑼𝑺 𝑫'𝑰𝑵𝑭𝑶 𝑪𝑶𝑵𝑻𝑨𝑪𝑻𝑬 𝑳𝑬 ☛⫷https://www.facebook.com/profile.php?id=61550007638743\n━━━━━━━━━━━━━━━━\n
 ☣『𝐒𝐇𝐀𝐃𝐎𝐖』☣
 handlerEvents.commandNotFound= ✧༺⚚༻✧ 𝐂𝐞𝐭𝐭𝐞 𝐜𝐦𝐝 𝐧'𝐞𝐱𝐢𝐬𝐭𝐞 𝐩𝐚𝐬... 𝐝𝐮 𝐦𝐨𝐢𝐧𝐬, 𝐩𝐚𝐬 𝐝𝐚𝐧𝐬 𝐥𝐚 𝐥𝐮𝐦𝐢𝐞̀𝐫𝐞. ✦ 𝐒𝐞𝐮𝐥𝐬 𝐜𝐞𝐮𝐱 𝐪𝐮𝐢 𝐚𝐠𝐢𝐬𝐬𝐞𝐧𝐭 𝐝𝐚𝐧𝐬 𝐥'𝐨𝐦𝐛𝐫𝐞 𝐩𝐞𝐮𝐯𝐞𝐧𝐭 𝐲 𝐚𝐜𝐜𝐞́𝐝𝐞𝐫... ✦༺⚚༻✧%2help\n✎﹏﹏﹏﹏﹏﹏﹏﹏﹏\n☣『𝐒𝐇𝐀𝐃𝐎𝐖』☣
-handlerEvents.commandNotFound2=🧬✨ 𝙼𝚈 𝙲𝚁𝙴𝙰𝚃𝙾𝚁 ✨🧬|𝐋'𝐀𝐥𝐜𝐡𝐢𝐦𝐢𝐞 𝐝𝐞 𝐥'𝐀𝐧𝐜𝐢𝐞𝐧 𝐦𝐨𝐧𝐝𝐞 ✶ 𝐢𝐧𝐟𝐮𝐬𝐞́𝐞 𝐝𝐚𝐧𝐬 𝐥𝐚 𝐩𝐞𝐫𝐟𝐞𝐜𝐭𝐢𝐨𝐧 𝐦𝐨𝐝𝐞𝐫𝐧𝐞 🌌\n╔≕≔≕≔≕≔≕≔≕≔≕≔≕╗\n✦ 𝐂𝐈𝐃×͜×𝐊𝐀𝐆𝐄𝐍𝐎 ✦ \n╚≕≔≕≔≕≔≕≔≕≔≕≔≕╝\n✨𝙇𝙄𝙉𝙆'𝙎 𝙁𝘼𝘾𝙀𝘽𝙊𝙊𝙆 & 𝙒𝙃𝘼𝚃𝙎𝔸𝙋✨\n≕≔≕≔≕≔≕≔≕≔≕≔≕≔≕≔≕≔\n╔≕≔≕≔≕☣☣☣≕≔≕≔≔╗\n『https://www.facebook.com/cidkageno228』『📞【WhatsApp】`https://wa.me/+22879583073』╚≕≔≕≔≕☣☣☣≕≔≕≔≕╝ \n≕≔≕≔≕≔≕≔≕≔≔≔≕≔≕≔≕\n☣𝐀𝐓𝐎𝐌𝐈𝐂☣ 𝐁𝐎𝐓☣:\n☣『𝐒𝐇𝐀𝐃𝐎𝐖』☣
+handlerEvents.commandNotFound2=🧬✨ 𝙼𝚈 𝙲𝚁𝙴𝙰𝚃𝙾𝚁 ✨🧬|𝐋'𝐀𝐥𝐜𝐡𝐢𝐦𝐢𝐞 𝐝𝐞 𝐥'𝐀𝐧𝐜𝐢𝐞𝐧 𝐦𝐨𝐧𝐝𝐞 ✶ 𝐢𝐧𝐟𝐮𝐬𝐞́𝐞 𝐝𝐚𝐧𝐬 𝐥𝐚 𝐩𝐞𝐫𝐟𝐞𝐜𝐭𝐢𝐨𝐧 𝐦𝐨𝐝𝐞𝐫𝐧𝐞 🌌\n╔≕≔≕≔≕≔≕≔≕≔≕≔≕╗\n░▒▓█𝐬𝐢𝐫 𝐑𝐮𝐟𝐢𝐧█▓▒░\n╚≕≔≕≔≕≔≕≔≕≔≕≔≕╝\n✨𝙇𝙄𝙉𝙆'𝙎 𝙁𝘼𝘾𝙀𝘽𝙊𝙊𝙆 & 𝙒𝙃𝘼𝚃𝙎𝔸𝙋✨\n≕≔≕≔≕≔≕≔≕≔≕≔≕≔≕≔≕≔\n╔≕≔≕≔≕☣☣☣≕≔≕≔≔╗\n『https://www.facebook.com/profile.php?id=61550007638743』『📞【WhatsApp】`❌』╚≕≔≕≔≕☣☣☣≕≔≕≔≕╝ \n≕≔≕≔≕≔≕≔≕≔≔≔≕≔≕≔≕\n웃❤유𝐫𝐢𝐜𝐡 𝐑𝐮𝐟𝐢𝐧 𝐛𝐨𝐭유❤웃:\n☣『GHOST』☣
 handlerEvents.commandSyntaxError=🚫| ⚠️🌑 𝙄𝙉𝘾𝙊𝙍𝙍𝙀𝘾𝙏 𝙎𝙔𝙉𝙏𝘼𝙓𝙀 🌑⚠️
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
 ❗𝒞𝒪𝒩𝒯𝒶𝒸𝒯 𝒲𝒾𝓉𝒽 𝒞𝒜𝒩𝒸𝑒𝒾𝒹 𝒞𝒲𝒟❗
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-handlerEvents.onlyAdmin=❌ | Only group administrators can use the command "%1" \n≕≔≕≔≕≔≕≔≕≔≕≔≕≔≕≔≕\n☣『𝐒𝐇𝐀𝐃𝐎𝐖』☣
+handlerEvents.onlyAdmin=❌ | Only group administrators can use the command "%1" \n≕≔≕≔≕≔≕≔≕≔≕≔≕≔≕≔≕\n☣『gнσѕт 』☣
 handlerEvents.onlyAdminToUseOnReply=❌ | Only group administrators can use the reply function of the command "%1"
 handlerEvents.onlyAdminToUseOnReaction=❌ | Only group administrators can use the reaction function of the command "%1" \n≕≔≕≔≕≔≕≔≕≔≕≔≕≔≕≔≕≔\n☣『𝐒𝐇𝐀𝐃𝐎𝐖』☣
-handlerEvents.onlyAdminBot2=❌ | 🕵️‍♂️🌑 𝑆𝑒𝑢𝑙 🌟 ★ 𝐂𝐈𝐃×͜×𝐊𝐀𝐆𝐄𝐍𝐎 ★ 𝑢𝑡𝑖𝑙𝑖𝑠𝑒 𝑙𝑎 𝑐𝑜𝑚𝑚𝑎𝑛𝒹𝑒  🌟🕵️‍♂️
+handlerEvents.onlyAdminBot2=❌ | 🕵️‍♂️🌑 𝑆𝑒𝑢𝑙 🌟░▒▓█►─═𝐬𝐢𝐫 𝐑𝐮𝐟𝐢𝐧 ═─◄█▓▒░ 𝑢𝑡𝑖𝑙𝑖𝑠𝑒 𝑙𝑎 𝑐𝑜𝑚𝑚𝑎𝑛𝒹𝑒  🌟🕵️‍♂️
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
 🌌🔮 𝑂𝓂𝒷𝓇𝑒𝒹 𝒾𝓃 𝓉𝒽𝑒 𝒸𝒽𝒶𝓈𝓂 𝑜𝒻 𝓉𝒽𝑒 𝒹𝒶𝓇𝓀𝓃𝑒𝒾𝓃𝑔 🌌🔮 ✨%1✨
 handlerEvents.onlyAdminBot2ToUseOnReply=❌ | Only bot's admin can use the reply function of the command "%1"
